Update ActiveState.java
one more getfirst converted to get(0)